--- a/sass/utils/_animation-checkmarks.scss
+++ b/sass/utils/_animation-checkmarks.scss
@@ -18,27 +18,67 @@
 
 
 
+
+
 .menu-section__course__dish{
 
-    &:hover > &__body{
+    &:active > &__body{
         overflow: hidden;
         text-overflow: ellipsis;
         white-space: nowrap;
         display: block;
     }
 
-    &:hover > &__check{
+    @media screen and  (min-width:map-get($breakpoints,tablet)){
+        &:hover > &__body{
+            overflow: hidden;
+            text-overflow: ellipsis;
+            white-space: nowrap;
+            display: block;
+        }
+    
+    @media screen and  (min-width:map-get($breakpoints,desktop)){
+        &:hover > &__body{
+            overflow: hidden;
+            text-overflow: ellipsis;
+            white-space: nowrap;
+            display: block;
+        }
+    }
+}
+
+
+
+
+
+
+
+
+    &:active > &__check{
         width: 100px;
         transform: translate(-100px,0) ;
-
-        @media screen and  (min-width:map-get($breakpoints,desktop)){
-            width: 30%;
-            height: 60px;
-        }
-
     }
 
-    &:hover >  &__price{
+    @media screen and  (min-width:map-get($breakpoints,tablet)){
+        &:hover > &__check{
+            width: 100px;
+            transform: translate(-100px,0) ;
+        }
+    } 
+    @media screen and  (min-width:map-get($breakpoints,desktop)){
+        &:hover > &__check{
+            width: 100px;
+            transform: translate(-100px,0) ;
+        }
+     }
+
+
+
+
+    
+
+
+    &:active >  &__price{
         transition: 350ms;
         transform: translate(-60px,0) ;
         padding-left: 30px;
@@ -49,7 +89,28 @@
         }
     }
 
-    &:hover i{
+    @media screen and  (min-width:map-get($breakpoints,tablet)){
+        &:hover > &__price{
+            transition: 350ms;
+            transform: translate(-60px,0) ;
+            padding-left: 30px;
+            margin-left: 10px;
+        }
+    }
+
+
+
+
+
+
+
+    &:active i{
         animation: rotate360 350ms;
+    }
+    
+    @media screen and  (min-width:map-get($breakpoints,tablet)){
+        &:hover i{
+            animation: rotate360 350ms;
+        }
     }
 }
